fix subscribe window z-index

--- a/css/style.css
+++ b/css/style.css
@@ -3257,7 +3257,7 @@ a[data-icon] {
     top: 0;
     left: 0;
     background-color: rgba(47, 49, 52, 0.85);
-    z-index: 1000;
+    z-index: 90;
     opacity: 0;
     transition: all 0.2s ease-in-out;
 }
@@ -3275,7 +3275,7 @@ a[data-icon] {
     gap: 20px;
     border-radius: 30px;
     background-color: #690E11;
-    z-index: 1001;
+    z-index: 90;
     opacity: 0;
     transition: all 0.2s ease-in-out;
 }
